# wavesimpro-starter-kit

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: helmholtz_1d_analytical.py  helmholtz_1d_create_medium.py  helmholtz_3d_advanced.py  helmholtz_3d_create_source.py  helmholtz_3d_import_lens.py  helmholtz_simulate.py  maxwell_2d_create_medium.py  maxwell_simulate.py  run_example.py
examples/wavesim_mat_to_py/: helmholtz_1d.py  helmholtz_2d_high_contrast.py  helmholtz_2d_low_contrast.py  helmholtz_3d_disordered.py  maxwell_2d.py  maxwell_mie.py
wsutils/: __init__.py  create_medium.py  create_source.py  utilities.py
